--- a/README.rdoc
+++ b/README.rdoc
@@ -38,5 +38,10 @@ Things you may want to cover:
 - Reports
 - Cheque amount limits based on user
 
+== TOOLS
+=CI : Semaphore
+=Push notifications : Slack
+=Deployment : Heroku app
+
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
